<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".home.HomeActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
...
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="-16dp" >

            </androidx.viewpager.widget.ViewPager>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_change_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_settings_24"
                app:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
...
